--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,10 +13,12 @@
     Heroku
   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="https://dashboard.heroku.com/apps">Login</a>
                       <a class="dropdown-item" href="https://devcenter.heroku.com/">Dev Center</a>
-                      <a class="dropdown-item" href="https://devcenter.heroku.com/articles/how-heroku-works">how to heroku</a>
+                      <a class="dropdown-item" href="https://devcenter.heroku.com/articles/how-heroku-works">How to</a>
+                      <a class="dropdown-item" href="https://devcenter.heroku.com/articles/deploying-nodejs">Deploying</a>
                       <div class="dropdown-divider"></div>
-                      <p>This are the official links</p>
+                      <p class="dropdown-item">This are the official links</p>
                   </div>
               </li>
           </ul>
